added github pages

--- a/projects.html
+++ b/projects.html
@@ -17,19 +17,16 @@
     </header>
     <main>
       <section class = "sitePaths">
-        <a href="university.html"><article class = "path">
-          <figure><img alt= "University"></figure>
-          <figcaption>Everything I did at the University</figcaption>
+        <a href="https://github.com/Jellybab/OdinProject"><article class = "path">
+          <figure><img alt= "Odin Project"></figure>
+          <figcaption>My progress with odin project</figcaption>
         </article></a>
 
-        <a href="projects.html"><article class = "path">
-          <figure><img alt= "Home Projects"></figure>
-          <figcaption>Everything I did at home</figcaption>
+        <a href="https://github.com/Jellybab/freeCodeCamp"><article class="path">
+            <figure><img alt="freeCodeCamp"></figure>
+            <figcaption>My progress on Free Code Camp</figcaption>
         </article></a>
-        <a><article class = "path">
-          <figure><img alt= "Other"></figure>
-          <figcaption>Other Projects</figcaption>
-        </article></a>
+
       </section>
     </main>
     <footer>
