--- a/portfolio.html
+++ b/portfolio.html
@@ -17,12 +17,12 @@
     </header>
     <main>
       <section class = "sitePaths">
-        <a href="university.html" target="_blank"><article class = "path">
+        <a href="university.html"><article class = "path">
           <figure><img alt= "University"></figure>
           <figcaption>Everything I did at the University</figcaption>
         </article></a>
 
-        <a href="projects.html" target="_blank"><article class = "path">
+        <a href="projects.html"><article class = "path">
           <figure><img alt= "Home Projects"></figure>
           <figcaption>Everything I did at home</figcaption>
         </article></a>
