--- a/projects.html
+++ b/projects.html
@@ -17,12 +17,12 @@
     </header>
     <main>
       <section class = "sitePaths">
-        <a href="https://github.com/Jellybab/OdinProject"><article class = "path">
+        <a href="https://github.com/Jellybab/OdinProject" target="_blank"><article class = "path">
           <figure><img alt= "Odin Project"></figure>
           <figcaption>My progress with odin project</figcaption>
         </article></a>
 
-        <a href="https://github.com/Jellybab/freeCodeCamp"><article class="path">
+        <a href="https://github.com/Jellybab/freeCodeCamp" target="_blank"><article class="path">
             <figure><img alt="freeCodeCamp"></figure>
             <figcaption>My progress on Free Code Camp</figcaption>
         </article></a>
